Fix Card Size on Mobile

--- a/src/index.css
+++ b/src/index.css
@@ -83,3 +83,17 @@ body,
   font-weight: 300;
   font-style: normal;
 }
+
+.inter-500 {
+  font-family: "Inter", serif;
+  font-optical-sizing: auto;
+  font-weight: 500;
+  font-style: normal;
+}
+
+.inter-600 {
+  font-family: "Inter", serif;
+  font-optical-sizing: auto;
+  font-weight: 600;
+  font-style: normal;
+}
